fix jumping html

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,7 @@ img {
 .no-scroll {
   overflow: hidden;
 }
+
+html {
+  overflow-y: scroll;
+}
